feature(Category): add service support
