# internal/transport/http/handler/v1/category/category.go
@@ -1,0 +1,201 @@
+package category
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/handler/v1/category/dto/request_body"
+	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/handler/v1/category/dto/response_body"
+	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/helpers/request"
+	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/helpers/response"
+	api "github.com/mephistolie/chefbook-backend-category/api/proto/implementation/v1"
+)
+
+// GetCategories Swagger Documentation
+//
+//	@Summary		Get user categories
+//	@Description	Get user categories
+//	@Tags			category
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Success		200				{object}	[]response_body.Category
+//	@Failure		400				{object}	fail.Response
+//	@Failure		500				{object}	fail.Response
+//	@Router			/v1/categories	[get]
+func (h *Handler) GetCategories(c *gin.Context) {
+	payload, err := request.GetUserPayloadOrResponse(c)
+	if err != nil {
+		return
+	}
+
+	res, err := h.service.GetUserCategories(c, &api.GetUserCategoriesRequest{UserId: payload.UserId.String()})
+	if err != nil {
+		response.FailGrpc(c, err)
+		return
+	}
+
+	response.Success(c, response_body.GetCategories(res))
+}
+
+// AddCategory Swagger Documentation
+//
+//	@Summary		Add category
+//	@Description	Add category
+//	@Tags			category
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Param			input			body		request_body.AddCategory	true	"Input"
+//	@Success		200				{object}	response_body.AddCategory
+//	@Failure		400				{object}	fail.Response
+//	@Failure		500				{object}	fail.Response
+//	@Router			/v1/categories	[post]
+func (h *Handler) AddCategory(c *gin.Context) {
+	payload, err := request.GetUserPayloadOrResponse(c)
+	if err != nil {
+		return
+	}
+
+	var body request_body.AddCategory
+	if err = c.BindJSON(&body); err != nil {
+		response.Fail(c, response.InvalidBody)
+		return
+	}
+
+	categoryId := ""
+	if body.Id != nil {
+		categoryId = body.Id.String()
+	}
+	emoji := ""
+	if body.Emoji != nil {
+		emoji = *body.Emoji
+	}
+
+	res, err := h.service.AddCategory(c, &api.AddCategoryRequest{
+		UserId:     payload.UserId.String(),
+		CategoryId: categoryId,
+		Name:       body.Name,
+		Emoji:      emoji,
+	})
+	if err != nil {
+		response.FailGrpc(c, err)
+		return
+	}
+
+	response.Success(c, response_body.AddCategory{Id: res.CategoryId})
+}
+
+// GetCategory Swagger Documentation
+//
+//	@Summary		Get category
+//	@Description	Get category
+//	@Tags			category
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Param			category_id						path		string	true	"Category ID"
+//	@Success		200								{object}	response_body.Category
+//	@Failure		400								{object}	fail.Response
+//	@Failure		500								{object}	fail.Response
+//	@Router			/v1/categories/{category_id}	[get]
+func (h *Handler) GetCategory(c *gin.Context) {
+	payload, err := request.GetUserPayloadOrResponse(c)
+	if err != nil {
+		return
+	}
+
+	res, err := h.service.GetCategory(c, &api.GetCategoryRequest{
+		CategoryId: c.Param(ParamCategoryId),
+		UserId:     payload.UserId.String(),
+	})
+	if err != nil {
+		response.FailGrpc(c, err)
+		return
+	}
+
+	var emoji *string
+	if len(res.Emoji) > 0 {
+		emoji = &res.Emoji
+	}
+
+	response.Success(c, response_body.Category{
+		Id:    res.CategoryId,
+		Name:  res.Name,
+		Emoji: emoji,
+	})
+}
+
+// UpdateCategory Swagger Documentation
+//
+//	@Summary		Update category
+//	@Description	Update category
+//	@Tags			category
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Param			category_id						path		int							true	"Category ID"
+//	@Param			input							body		request_body.UpdateCategory	true	"Input"
+//	@Success		200								{object}	response.MessageBody
+//	@Failure		400								{object}	fail.Response
+//	@Failure		500								{object}	fail.Response
+//	@Router			/v1/categories/{category_id}	[put]
+func (h *Handler) UpdateCategory(c *gin.Context) {
+	payload, err := request.GetUserPayloadOrResponse(c)
+	if err != nil {
+		return
+	}
+
+	var body request_body.UpdateCategory
+	if err = c.BindJSON(&body); err != nil {
+		response.Fail(c, response.InvalidBody)
+		return
+	}
+
+	emoji := ""
+	if body.Emoji != nil {
+		emoji = *body.Emoji
+	}
+
+	res, err := h.service.UpdateCategory(c, &api.UpdateCategoryRequest{
+		UserId:     payload.UserId.String(),
+		CategoryId: c.Param(ParamCategoryId),
+		Name:       body.Name,
+		Emoji:      emoji,
+	})
+	if err != nil {
+		response.FailGrpc(c, err)
+		return
+	}
+
+	response.Message(c, res.Message)
+}
+
+// DeleteCategory Swagger Documentation
+//
+//	@Summary		Delete category
+//	@Description	Delete category
+//	@Tags			category
+//	@Security		ApiKeyAuth
+//	@Accept			json
+//	@Produce		json
+//	@Param			category_id						path		int	true	"Category ID"
+//	@Success		200								{object}	response.MessageBody
+//	@Failure		400								{object}	fail.Response
+//	@Failure		500								{object}	fail.Response
+//	@Router			/v1/categories/{category_id}	[delete]
+func (h *Handler) DeleteCategory(c *gin.Context) {
+	payload, err := request.GetUserPayloadOrResponse(c)
+	if err != nil {
+		return
+	}
+
+	res, err := h.service.DeleteCategory(c, &api.DeleteCategoryRequest{
+		CategoryId: c.Param(ParamCategoryId),
+		UserId:     payload.UserId.String(),
+	})
+	if err != nil {
+		response.FailGrpc(c, err)
+		return
+	}
+
+	response.Message(c, res.Message)
+}
