# internal/transport/http/handler/v1/category/dto/request_body/category.go
@@ -1,0 +1,14 @@
+package request_body
+
+import "github.com/google/uuid"
+
+type AddCategory struct {
+	Id    *uuid.UUID `json:"categoryId,omitempty"`
+	Name  string     `json:"name"`
+	Emoji *string    `json:"emoji,omitempty"`
+}
+
+type UpdateCategory struct {
+	Name  string  `json:"name"`
+	Emoji *string `json:"emoji,omitempty"`
+}
