# internal/transport/http/handler/v1/category/handler.go
@@ -1,0 +1,17 @@
+package category
+
+import (
+	"github.com/mephistolie/chefbook-backend-api-gateway/internal/service"
+)
+
+const (
+	ParamCategoryId = "category_id"
+)
+
+type Handler struct {
+	service *service.Category
+}
+
+func NewHandler(service *service.Category) *Handler {
+	return &Handler{service: service}
+}
