# internal/transport/http/handler/v1/handler.go
@@ -4,6 +4,7 @@ import (
 	"github.com/mephistolie/chefbook-backend-api-gateway/internal/config"
 	"github.com/mephistolie/chefbook-backend-api-gateway/internal/service"
 	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/handler/v1/auth"
+	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/handler/v1/category"
 	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/handler/v1/profile"
 	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/handler/v1/shopping_list"
 )
@@ -11,6 +12,7 @@ import (
 type Handler struct {
 	Auth         *auth.Handler
 	Profile      *profile.Handler
+	Category     *category.Handler
 	ShoppingList *shopping_list.Handler
 }
 
@@ -18,6 +20,7 @@ func NewHandler(services *service.Services, cfg *config.Config) *Handler {
 	return &Handler{
 		Auth:         auth.NewHandler(services.Auth, cfg.Domains),
 		Profile:      profile.NewHandler(services.Auth, services.User, services.Profile),
+		Category:     category.NewHandler(services.Category),
 		ShoppingList: shopping_list.NewHandler(services.ShoppingList, cfg.Domains),
 	}
 }
