# internal/transport/http/router/v1/router.go
@@ -3,6 +3,7 @@ package v1
 import (
 	"fmt"
 	"github.com/gin-gonic/gin"
+	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/handler/v1/category"
 	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/handler/v1/profile"
 	"github.com/mephistolie/chefbook-backend-api-gateway/internal/transport/http/handler/v1/shopping_list"
 
@@ -27,6 +28,7 @@ func (r *Router) Init(api *gin.RouterGroup) {
 	{
 		r.initAuthRoutes(routerGroup)
 		r.initProfileRoutes(routerGroup)
+		r.initCategoriesRoutes(routerGroup)
 		r.initShoppingListRoutes(routerGroup)
 	}
 }
@@ -77,6 +79,17 @@ func (r *Router) initProfileRoutes(api *gin.RouterGroup) {
 	profilesGroup := api.Group("/profiles", r.authMiddleware.AuthorizeUser)
 	{
 		profilesGroup.GET(fmt.Sprintf("/:%s", profile.ParamProfileId), r.handler.Profile.GetProfile)
+	}
+}
+
+func (r *Router) initCategoriesRoutes(api *gin.RouterGroup) {
+	categoriesGroup := api.Group("/categories", r.authMiddleware.AuthorizeUser)
+	{
+		categoriesGroup.GET("", r.handler.Category.GetCategories)
+		categoriesGroup.POST("", r.handler.Category.AddCategory)
+		categoriesGroup.GET(fmt.Sprintf("/:%s", category.ParamCategoryId), r.handler.Category.GetCategory)
+		categoriesGroup.PUT(fmt.Sprintf("/:%s", category.ParamCategoryId), r.handler.Category.UpdateCategory)
+		categoriesGroup.DELETE(fmt.Sprintf("/:%s", category.ParamCategoryId), r.handler.Category.DeleteCategory)
 	}
 }
 
